assets/css/style.css
/* Logo & Nav */
#logo-img img {
    width: 30%;
    border-radius: 20%;
}

.nav-links-container {
    border: 3px solid #808080;
    background-color: rgba(127, 127, 127, 0.2);
}

.nav-links-container a {
    text-decoration: none; 
}

.current-page {
    font-weight: 700;
}

/* Footer */
footer {
    display: flex;
    flex-direction: column; 
    align-items: center;
    position: sticky;
    bottom: 0;
}

.list-group-item {
    border: 0;
    padding: 10px 20px;
}

.list-group-item > * {
    color: rgb(80, 80, 80);
}



/* Homepage Gallery */
/* revisit this to check if still needed */
.standard-image {
    width: 100%;
    aspect-ratio: 1 / 1;
    object-fit: cover;
} 
#page-content {
    transition-duration: 1s;
    transition-timing-function: ease-in-out;
}

.page-content-higher {
    border: 3px solid orangered;
    transform: translate(0, -600px);
    transition-timing-function: ease-in-out;
    
}

/* Modals */
.modal-image {
    max-width: 100%;
    border-radius: 2px;

}

.modal-content p {
    padding: 0 20px;
    border: 0;
}

.dietary-requirements {
    list-style-type: none;
}

.dietary-requirements li i {
    padding: 0 5px 0 0;
}

.modal-close-button {
    display: flex;
    flex-direction: column-reverse;
    padding: 0 15px 15px 0;
}

.modal-lower-content {
    display: flex;
    justify-content: space-between;
}

.modal-content, .modal-header, .modal-title {
    border: none;
}

/* Contact Page */
.contact-form {
    background-color: rgba(127, 127, 127, 0.2);
    border: 2px solid #808080;
    border-radius: 12px;
}

